[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "routelab"
version = "0.1.0"
description = "Intercept, simulate, replay, and observe outbound HTTP traffic from Python applications."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Vishwadeep Balakrishnan" }
]
dependencies = [
  "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
routelab = "routelab.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["routelab*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
